@@ -175,8 +175,10 @@ $wgAutoloadLocalClasses = array(
 	'QuickTemplate' => 'includes/SkinTemplate.php',
 	'RawMessage' => 'includes/Message.php',
 	'ReadOnlyError' => 'includes/Exception.php',
-	'RedirectSpecialArticle' => 'includes/specialpage/RedirectSpecialPage.php',
+	'RedirectSpecialArticle' => 'includes/specialpage/RedirectSpecialPage.php', // deprecated since 1.23
 	'RedirectSpecialPage' => 'includes/specialpage/RedirectSpecialPage.php',
+	'RedirectSpecialPageToPage' => 'includes/specialpage/RedirectSpecialPage.php',
+	'RedirectSpecialPageToSpecial' => 'includes/specialpage/RedirectSpecialPage.php',
 	'ReverseChronologicalPager' => 'includes/Pager.php',
 	'RevisionItem' => 'includes/RevisionList.php',
 	'RevisionItemBase' => 'includes/RevisionList.php',
@@ -200,7 +202,7 @@ $wgAutoloadLocalClasses = array(
 	'SpecialAllMyUploads' => 'includes/specials/SpecialMyRedirectPages.php',
 	'SpecialPage' => 'includes/specialpage/SpecialPage.php',
 	'SpecialPageFactory' => 'includes/specialpage/SpecialPageFactory.php',
-	'SpecialRedirectToSpecial' => 'includes/specialpage/RedirectSpecialPage.php',
+	'SpecialRedirectToSpecial' => 'includes/specialpage/RedirectSpecialPage.php', // deprecated since 1.23
 	'SquidPurgeClient' => 'includes/SquidPurgeClient.php',
 	'SquidPurgeClientPool' => 'includes/SquidPurgeClient.php',
 	'StatCounter' => 'includes/StatCounter.php',
